fix: responsive layout on tablet

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,7 +100,7 @@
   --slide-spacing: 1.1rem;
   --slide-size: 100%;
   --slide-height: 19rem;
-  padding: 1.1rem;
+  padding: 0.5rem;
 }
 .embla__viewport {
   overflow: hidden;
